Update  iris.ipynb
Fixing Problems

--- a/iris.ipynb
+++ b/iris.ipynb
@@ -574,9 +574,99 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "Jetzt das gleiche versuchen für Iris-Virginica  sepal length "
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X_sepal_length = iris[\"data\"][:, 0:1]  # sepal length width array([[4.6],[4.7],[4.8],[4.9],...])\n",
+    "y_sepal_length = (iris[\"target\"] == 2).astype(np.int)  # array of 1 if Iris-Virginica, else 0\n",
+    "log_reg_sepal_length = LogisticRegression()\n",
+    "log_reg_sepal_length.fit(X_sepal_length,y_sepal_length)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X_sepal_length_new = np.linspace(1, 7, 1000).reshape(-1, 1)\n",
+    "X_sepal_length_new == np.linspace(1, 7, 1000).reshape(-1, 1)\n",
+    "y_sepal_length_proba = log_reg_sepal_length.predict_proba(X_sepal_length_new)\n",
+    "decision_boundary_sepal_length = X_sepal_length_new[y_sepal_length_proba[:, 1] >= 0.5][0]\n",
+    "print(decision_boundary_sepal_length)\n",
+    "\n",
+    "plt.figure(figsize=(8, 3))\n",
+    "plt.plot(X_sepal_length[y_sepal_length==0], y_sepal_length[y_sepal_length==0], \"bs\")\n",
+    "plt.plot(X_sepal_length[y_sepal_length==1], y_sepal_length[y_sepal_length==1], \"g^\")\n",
+    "plt.plot([decision_boundary_sepal_length, decision_boundary_sepal_length], [-1, 2], \"k:\", linewidth=2)\n",
+    "plt.plot(X_sepal_length_new, y_sepal_length_proba[:, 1], \"g-\", linewidth=2, label=\"Iris-Virginica\")\n",
+    "plt.plot(X_sepal_length_new, y_sepal_length_proba[:, 0], \"b--\", linewidth=2, label=\"Not Iris-Virginica\")\n",
+    "plt.text(decision_boundary_sepal_length+0.02, 0.15, \"Decision  boundary\", fontsize=14, color=\"k\", ha=\"center\")\n",
+    "plt.arrow(decision_boundary_sepal_length, 0.08, -0.3, 0, head_width=0.05, head_length=0.1, fc='b', ec='b')\n",
+    "plt.arrow(decision_boundary_sepal_length, 0.92, 0.3, 0, head_width=0.05, head_length=0.1, fc='g', ec='g')\n",
+    "plt.xlabel(\"Petal lenght (cm)\", fontsize=14)\n",
+    "plt.ylabel(\"Probability\", fontsize=14)\n",
+    "plt.legend(loc=\"center left\", fontsize=14)\n",
+    "plt.axis([0, 8, -0.02, 1.02])\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "iris_aufgabe_sepal_length = np.array([5.3]).reshape(1,-1)\n",
+    "print(iris_aufgabe_sepal_length)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "iris_aufgabe_sepal_length_proba = log_reg_sepal_length.predict_proba(iris_aufgabe_sepal_length)\n",
+    "\n",
+    "iris_aufgabe_sepal_length_proba"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Jetzt das gleiche versuchen für Iris-Virginica  pental width"
    ]
   },
   {
@@ -596,10 +686,10 @@
     }
    ],
    "source": [
-    "X_sepal_length = iris[\"data\"][:, 0:1]  # sepal length width array([[4.6],[4.7],[4.8],[4.9],...])\n",
-    "y_sepal_length = (iris[\"target\"] == 2).astype(np.int)  # array of 1 if Iris-Virginica, else 0\n",
-    "log_reg_sepal_length = LogisticRegression()\n",
-    "log_reg_sepal_length.fit(X_sepal_length,y_sepal_length)\n"
+    "X_pental_width = iris[\"data\"][:, 3:4]  # pental width width array([[4.6],[4.7],[4.8],[4.9],...])\n",
+    "y_pental_width = (iris[\"target\"] == 2).astype(np.int)  # array of 1 if Iris-Virginica, else 0\n",
+    "log_reg_pental_width = LogisticRegression()\n",
+    "log_reg_pental_width.fit(X_pental_width,y_pental_width)\n"
    ]
   },
   {
@@ -628,21 +718,21 @@
     }
    ],
    "source": [
-    "X_sepal_length_new = np.linspace(1, 7, 1000).reshape(-1, 1)\n",
-    "X_sepal_length_new == np.linspace(1, 7, 1000).reshape(-1, 1)\n",
-    "y_sepal_length_proba = log_reg_sepal_length.predict_proba(X_sepal_length_new)\n",
-    "decision_boundary_sepal_length = X_sepal_length_new[y_sepal_length_proba[:, 1] >= 0.5][0]\n",
-    "print(decision_boundary_sepal_length)\n",
+    "X_pental_width_new = np.linspace(1, 7, 1000).reshape(-1, 1)\n",
+    "X_pental_width_new == np.linspace(1, 7, 1000).reshape(-1, 1)\n",
+    "y_pental_width_proba = log_reg_pental_width.predict_proba(X_pental_width_new)\n",
+    "decision_boundary_pental_width = X_pental_width_new[y_pental_width_proba[:, 1] >= 0.5][0]\n",
+    "print(decision_boundary_pental_width)\n",
     "\n",
     "plt.figure(figsize=(8, 3))\n",
-    "plt.plot(X_sepal_length[y_sepal_length==0], y_sepal_length[y_sepal_length==0], \"bs\")\n",
-    "plt.plot(X_sepal_length[y_sepal_length==1], y_sepal_length[y_sepal_length==1], \"g^\")\n",
-    "plt.plot([decision_boundary_sepal_length, decision_boundary_sepal_length], [-1, 2], \"k:\", linewidth=2)\n",
-    "plt.plot(X_sepal_length_new, y_sepal_length_proba[:, 1], \"g-\", linewidth=2, label=\"Iris-Virginica\")\n",
-    "plt.plot(X_sepal_length_new, y_sepal_length_proba[:, 0], \"b--\", linewidth=2, label=\"Not Iris-Virginica\")\n",
-    "plt.text(decision_boundary_sepal_length+0.02, 0.15, \"Decision  boundary\", fontsize=14, color=\"k\", ha=\"center\")\n",
-    "plt.arrow(decision_boundary_sepal_length, 0.08, -0.3, 0, head_width=0.05, head_length=0.1, fc='b', ec='b')\n",
-    "plt.arrow(decision_boundary_sepal_length, 0.92, 0.3, 0, head_width=0.05, head_length=0.1, fc='g', ec='g')\n",
+    "plt.plot(X_pental_width[y_pental_width==0], y_pental_width[y_pental_width==0], \"bs\")\n",
+    "plt.plot(X_pental_width[y_pental_width==1], y_pental_width[y_pental_width==1], \"g^\")\n",
+    "plt.plot([decision_boundary_pental_width, decision_boundary_pental_width], [-1, 2], \"k:\", linewidth=2)\n",
+    "plt.plot(X_pental_width_new, y_pental_width_proba[:, 1], \"g-\", linewidth=2, label=\"Iris-Virginica\")\n",
+    "plt.plot(X_pental_width_new, y_pental_width_proba[:, 0], \"b--\", linewidth=2, label=\"Not Iris-Virginica\")\n",
+    "plt.text(decision_boundary_pental_width+0.02, 0.15, \"Decision  boundary\", fontsize=14, color=\"k\", ha=\"center\")\n",
+    "plt.arrow(decision_boundary_pental_width, 0.08, -0.3, 0, head_width=0.05, head_length=0.1, fc='b', ec='b')\n",
+    "plt.arrow(decision_boundary_pental_width, 0.92, 0.3, 0, head_width=0.05, head_length=0.1, fc='g', ec='g')\n",
     "plt.xlabel(\"Petal lenght (cm)\", fontsize=14)\n",
     "plt.ylabel(\"Probability\", fontsize=14)\n",
     "plt.legend(loc=\"center left\", fontsize=14)\n",
@@ -664,8 +754,8 @@
     }
    ],
    "source": [
-    "iris_aufgabe_sepal_length = np.array([5.3]).reshape(1,-1)\n",
-    "print(iris_aufgabe_sepal_length)"
+    "iris_aufgabe_pental_width = np.array([5.3]).reshape(1,-1)\n",
+    "print(iris_aufgabe_pental_width)"
    ]
   },
   {
@@ -685,9 +775,9 @@
     }
    ],
    "source": [
-    "iris_aufgabe_sepal_length_proba = log_reg_sepal_length.predict_proba(iris_aufgabe_sepal_length)\n",
+    "iris_aufgabe_pental_width_proba = log_reg_pental_width.predict_proba(iris_aufgabe_pental_width)\n",
     "\n",
-    "iris_aufgabe_sepal_length_proba"
+    "iris_aufgabe_pental_width_proba"
    ]
   },
   {
